Sensitivity and Specificity

--- a/MAgEC_SHAP_RBO.ipynb
+++ b/MAgEC_SHAP_RBO.ipynb
@@ -878,6 +878,226 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'creatinine' in consensus_heto.groupby(['winner'])['rbo'].mean().index.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'creatinine' in consensus_homo.groupby(['winner'])['rbo'].mean().index.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'potassium' in consensus_heto.groupby(['winner'])['rbo'].mean().index.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'potassium' in consensus_homo.groupby(['winner'])['rbo'].mean().index.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MLP  0.8577430972388955 0.6498800959232613\n",
+      "SVM  0.8067226890756303 0.6906474820143885\n",
+      "LR  0.6722689075630253 0.6738609112709832\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Accuracy: 0.816131\n",
+    "# Precision: 0.533465\n",
+    "# Recall: 0.649880\n",
+    "# F1 score: 0.585946\n",
+    "# ROC AUC: 0.832637\n",
+    "# [[1429  237]\n",
+    "#  [ 146  271]]\n",
+    "cm = np.array([[1429,237],[146,271]])\n",
+    "sensitivity = cm[0,0]/(cm[0,0]+cm[0,1])\n",
+    "specificity = cm[1,1]/(cm[1,0]+cm[1,1])\n",
+    "print('MLP ', sensitivity, specificity)\n",
+    "\n",
+    "# Accuracy: 0.783485\n",
+    "# Precision: 0.472131\n",
+    "# Recall: 0.690647\n",
+    "# F1 score: 0.560857\n",
+    "# ROC AUC: 0.813949\n",
+    "# [[1344  322]\n",
+    "#  [ 129  288]]\n",
+    "cm = np.array([[1344,322],[129,288]])\n",
+    "sensitivity = cm[0,0]/(cm[0,0]+cm[0,1])\n",
+    "specificity = cm[1,1]/(cm[1,0]+cm[1,1])\n",
+    "print('SVM ', sensitivity, specificity)\n",
+    "\n",
+    "# Accuracy: 0.672588\n",
+    "# Precision: 0.339782\n",
+    "# Recall: 0.673861\n",
+    "# F1 score: 0.451768\n",
+    "# ROC AUC: 0.721519\n",
+    "# [[1120  546]\n",
+    "#  [ 136  281]]\n",
+    "cm = np.array([[1120,546],[136,281]])\n",
+    "sensitivity = cm[0,0]/(cm[0,0]+cm[0,1])\n",
+    "specificity = cm[1,1]/(cm[1,0]+cm[1,1])\n",
+    "print('LR ', sensitivity, specificity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "others = list()\n",
+    "models = ('lr', 'svm', 'mlp')\n",
+    "for i,m in enumerate([lr, sv, mlp3]):\n",
+    "    preds = pd.DataFrame(m.predict_proba(xst_valid)[:, 1])\n",
+    "    preds.columns = [models[i] + '_prob_1']\n",
+    "    others.append(preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds = pd.concat(others + [Y_valid.reset_index()], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds['ensemble_prob'] = preds[['lr_prob_1','svm_prob_1','mlp_prob_1']].mean(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds['class_1'] = (preds['ensemble_prob'] >= 0.5).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.826692\n",
+      "Precision: 0.561947\n",
+      "Recall: 0.609113\n",
+      "F1 score: 0.584580\n",
+      "ROC AUC: 0.824505\n",
+      "[[1468  198]\n",
+      " [ 163  254]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "accuracy, precision, recall, f1, auc = mg.model_metrics(preds['ensemble_prob'],\n",
+    "                                                        preds['class_1'],\n",
+    "                                                        preds['label'],\n",
+    "                                                        verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ensemble  0.8811524609843937 0.6091127098321343\n"
+     ]
+    }
+   ],
+   "source": [
+    "cm = np.array([[1468,198],[163,254]])\n",
+    "sensitivity = cm[0,0]/(cm[0,0]+cm[0,1])\n",
+    "specificity = cm[1,1]/(cm[1,0]+cm[1,1])\n",
+    "print('Ensemble ', sensitivity, specificity)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
