Correction for sensitivity and  specificity

--- a/MAgEC_SHAP_RBO.ipynb
+++ b/MAgEC_SHAP_RBO.ipynb
@@ -957,17 +957,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sensitivity and Specificity\n",
+    "- Sensitivity measures the proportion of positives that are correctly identified (e.g., the percentage of sick people who are correctly identified as having some illness).\n",
+    "-  Specificity measures the proportion of negatives that are correctly identified (e.g., the percentage of healthy people who are correctly identified as not having some illness)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MLP  0.8577430972388955 0.6498800959232613\n",
-      "SVM  0.8067226890756303 0.6906474820143885\n",
-      "LR  0.6722689075630253 0.6738609112709832\n"
+      "MLP  0.6498800959232613 0.8577430972388955\n",
+      "SVM  0.6906474820143885 0.8067226890756303\n",
+      "LR  0.6738609112709832 0.6722689075630253\n"
      ]
     }
    ],
@@ -979,9 +988,12 @@
     "# ROC AUC: 0.832637\n",
     "# [[1429  237]\n",
     "#  [ 146  271]]\n",
-    "cm = np.array([[1429,237],[146,271]])\n",
-    "sensitivity = cm[0,0]/(cm[0,0]+cm[0,1])\n",
-    "specificity = cm[1,1]/(cm[1,0]+cm[1,1])\n",
+    "tn = 1429\n",
+    "fp = 237\n",
+    "tp = 271\n",
+    "fn = 146\n",
+    "sensitivity = tp/(tp+fn)\n",
+    "specificity = tn/(tn+fp)\n",
     "print('MLP ', sensitivity, specificity)\n",
     "\n",
     "# Accuracy: 0.783485\n",
@@ -991,9 +1003,12 @@
     "# ROC AUC: 0.813949\n",
     "# [[1344  322]\n",
     "#  [ 129  288]]\n",
-    "cm = np.array([[1344,322],[129,288]])\n",
-    "sensitivity = cm[0,0]/(cm[0,0]+cm[0,1])\n",
-    "specificity = cm[1,1]/(cm[1,0]+cm[1,1])\n",
+    "tn = 1344\n",
+    "fp = 322\n",
+    "tp = 288\n",
+    "fn = 129\n",
+    "sensitivity = tp/(tp+fn)\n",
+    "specificity = tn/(tn+fp)\n",
     "print('SVM ', sensitivity, specificity)\n",
     "\n",
     "# Accuracy: 0.672588\n",
@@ -1003,9 +1018,12 @@
     "# ROC AUC: 0.721519\n",
     "# [[1120  546]\n",
     "#  [ 136  281]]\n",
-    "cm = np.array([[1120,546],[136,281]])\n",
-    "sensitivity = cm[0,0]/(cm[0,0]+cm[0,1])\n",
-    "specificity = cm[1,1]/(cm[1,0]+cm[1,1])\n",
+    "tn = 1120\n",
+    "fp = 546\n",
+    "tp = 281\n",
+    "fn = 136\n",
+    "sensitivity = tp/(tp+fn)\n",
+    "specificity = tn/(tn+fp)\n",
     "print('LR ', sensitivity, specificity)"
    ]
   },
@@ -1078,22 +1096,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ensemble  0.8811524609843937 0.6091127098321343\n"
+      "Ensemble  0.6091127098321343 0.8811524609843937\n"
      ]
     }
    ],
    "source": [
-    "cm = np.array([[1468,198],[163,254]])\n",
-    "sensitivity = cm[0,0]/(cm[0,0]+cm[0,1])\n",
-    "specificity = cm[1,1]/(cm[1,0]+cm[1,1])\n",
+    "tn = 1468\n",
+    "fp = 198\n",
+    "tp = 254\n",
+    "fn = 163\n",
+    "sensitivity = tp/(tp+fn)\n",
+    "specificity = tn/(tn+fp)\n",
     "print('Ensemble ', sensitivity, specificity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TN 1468\n",
+      "FP 198\n",
+      "TP 254\n",
+      "FN 163\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('TN', np.sum((preds['label']==0) & (preds['class_1'] == preds['label'])))\n",
+    "print('FP', np.sum((preds['label']==0) & (preds['class_1'] != preds['label'])))\n",
+    "print('TP', np.sum((preds['label']==1) & (preds['class_1'] == preds['label'])))\n",
+    "print('FN', np.sum((preds['label']==1) & (preds['class_1'] != preds['label'])))"
    ]
   },
   {
