xgboost  for fun

--- a/MAgEC_SHAP_RBO.ipynb
+++ b/MAgEC_SHAP_RBO.ipynb
@@ -1141,6 +1141,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How to increase recall and sensitivity w/ xgboost (closer to SOTA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.724436\n",
+      "Precision: 0.403206\n",
+      "Recall: 0.784173\n",
+      "F1 score: 0.532573\n",
+      "ROC AUC: 0.831050\n",
+      "[[1182  484]\n",
+      " [  90  327]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "xg2 = xgboost.XGBClassifier(scale_pos_weight=6.5)\n",
+    "xg2.fit(xst_train, Y_train['label'])\n",
+    "mg.evaluate(xg2, xst_valid, Y_valid['label'], verbose=True);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xgboost  0.7841726618705036 0.709483793517407\n"
+     ]
+    }
+   ],
+   "source": [
+    "tn = 1182\n",
+    "fp = 484\n",
+    "tp = 327\n",
+    "fn = 90\n",
+    "sensitivity = tp/(tp+fn)\n",
+    "specificity = tn/(tn+fp)\n",
+    "print('xgboost ', sensitivity, specificity)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
