--- a/notebooks/MAgEC_SHAP_RBO.ipynb
+++ b/notebooks/MAgEC_SHAP_RBO.ipynb
@@ -16,8 +16,6 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import src.magec_utils as mg\n",
-    "import src.mimic_utils as mimic\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.utils import class_weight\n",
     "import seaborn as sns\n",
@@ -30,6 +28,11 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "import tensorflow as tf\n",
     "import random as python_random\n",
+    "import site\n",
+    "site.addsitedir('../src')  # Always appends to end\n",
+    "import magec_utils as mg\n",
+    "import mimic_utils as mimic\n",
+    "\n",
     "\n",
     "pd.set_option('display.max_columns', None)\n",
     "\n",
@@ -149,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MAgEC Experiements"
+    "## MAgEC Experiments"
    ]
   },
   {
